// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Cards/ItemMonitoringCards Default 1`] = `
<div
  className="gap-8, flex-wrap mobile:m-0 mobile:w-full mobile:max-w-[100%] mx-auto grid max-w-full grid-cols-17 gap-3"
>
  <div
    className="w-full rounded-xl border border-neutral-200 bg-white p-8 col-span-4"
  >
    <div
      className="m-[-18px] mr-[-27px]"
    >
      <div
        className="flex justify-between"
      >
        <p
          className="flex items-center tracking-[-0.154px]  text-14"
          data-testid="txt"
        >
          Tree Count
           
          <div
            className="group relative flex cursor-pointer flex-col items-center undefined"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="fixed -z-10 "
              style={
                Object {
                  "left": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="text-12 relative rounded p-3 text-left opacity-0 shadow-monitored w-56 bg-darkCustom text-white "
              >
                <div
                  className="absolute border-[5px] bottom-0 left-1/2 transform -translate-x-1/2 mb-[-9px] border-b-transparent border-l-transparent border-r-transparent border-darkCustom"
                  style={
                    Object {
                      "marginLeft": "0px",
                    }
                  }
                />
                <p
                  className="mb-1 text-12-bold"
                  data-testid="txt"
                >
                  Tree Count
                </p>
                <p
                  className="leading-[normal] !font-light  text-12-light with-inner-html"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "",
                    }
                  }
                  data-testid="txt"
                />
              </div>
            </div>
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
          </div>
        </p>
      </div>
      <p
        className="text-24"
        data-testid="txt"
      >
        462
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Cards/ItemMonitoringCards Type Graph 1`] = `
<div
  className="gap-8, flex-wrap mobile:m-0 mobile:w-full mobile:max-w-[100%] mx-auto grid max-w-full grid-cols-17 gap-3"
>
  <div
    className="w-full rounded-xl border border-neutral-200 bg-white p-8 col-span-4"
  >
    <div
      className="m-[-18px] mr-[-27px]"
    >
      <div
        className="flex justify-between"
      >
        <p
          className="flex items-center tracking-[-0.154px] w-full justify-center text-14"
          data-testid="txt"
        >
          Tree Count
           
          <div
            className="group relative flex cursor-pointer flex-col items-center undefined"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="fixed -z-10 "
              style={
                Object {
                  "left": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="text-12 relative rounded p-3 text-left opacity-0 shadow-monitored w-56 bg-darkCustom text-white "
              >
                <div
                  className="absolute border-[5px] bottom-0 left-1/2 transform -translate-x-1/2 mb-[-9px] border-b-transparent border-l-transparent border-r-transparent border-darkCustom"
                  style={
                    Object {
                      "marginLeft": "0px",
                    }
                  }
                />
                <p
                  className="mb-1 text-12-bold"
                  data-testid="txt"
                >
                  Tree Count
                </p>
                <p
                  className="leading-[normal] !font-light  text-12-light with-inner-html"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "",
                    }
                  }
                  data-testid="txt"
                />
              </div>
            </div>
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
          </div>
        </p>
      </div>
      <div
        className="relative"
      >
        <div
          style={
            Object {
              "height": undefined,
              "width": 24,
            }
          }
        />
      </div>
      <div
        className="mt-2 flex flex-wrap justify-center gap-x-2"
      >
        <span
          className="flex items-center whitespace-nowrap text-8"
          data-testid="txt"
        >
          <div
            className="h-1 w-1 lg:h-2 lg:w-2 bg-blueCustom rounded-full"
          />
           
          Average Number of Trees per hectare
        </span>
        <span
          className="flex items-center whitespace-nowrap text-8"
          data-testid="txt"
        >
          <div
            className="h-1 w-1 lg:h-2 lg:w-2 bg-primary rounded-full"
          />
           
          Number of Trees
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Cards/ItemMonitoringCards Type Graph Button 1`] = `
<div
  className="gap-8, flex-wrap mobile:m-0 mobile:w-full mobile:max-w-[100%] mx-auto grid max-w-full grid-cols-17 gap-3"
>
  <div
    className="w-full rounded-xl border border-neutral-200 bg-white p-8 col-span-9 row-span-2"
  >
    <div
      className="m-[-18px] mr-[-27px]"
    >
      <div
        className="flex justify-between"
      >
        <p
          className="flex items-center tracking-[-0.154px] pl-[7.2%] text-14"
          data-testid="txt"
        >
          EMA SNOVO
           
          <div
            className="group relative flex cursor-pointer flex-col items-center undefined"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="fixed -z-10 "
              style={
                Object {
                  "left": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="text-12 relative rounded p-3 text-left opacity-0 shadow-monitored w-56 bg-darkCustom text-white "
              >
                <div
                  className="absolute border-[5px] bottom-0 left-1/2 transform -translate-x-1/2 mb-[-9px] border-b-transparent border-l-transparent border-r-transparent border-darkCustom"
                  style={
                    Object {
                      "marginLeft": "0px",
                    }
                  }
                />
                <p
                  className="mb-1 text-12-bold"
                  data-testid="txt"
                >
                  EMA SNOVO
                </p>
                <p
                  className="leading-[normal] !font-light  text-12-light with-inner-html"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "",
                    }
                  }
                  data-testid="txt"
                />
              </div>
            </div>
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
          </div>
        </p>
        <div
          className="flex rounded-lg bg-neutral-100 p-1"
        >
          <button
            className="flex items-center justify-center gap-1.5 tracking-wide w-fit-content text-blueCustom-600"
          >
            <span
              className="text-14-light px-3 py-1 opacity-60 rounded-lg"
            >
              Week
            </span>
          </button>
          <button
            className="flex items-center justify-center gap-1.5 tracking-wide w-fit-content text-blueCustom-600"
          >
            <span
              className="text-14-semibold px-3 py-1 bg-white rounded-lg"
            >
              Month
            </span>
          </button>
          <button
            className="flex items-center justify-center gap-1.5 tracking-wide w-fit-content text-blueCustom-600"
          >
            <span
              className="text-14-light px-3 py-1 opacity-60 rounded-lg"
            >
              Year
            </span>
          </button>
        </div>
      </div>
      <div
        className="relative"
      >
        <div
          className="absolute left-[40%] top-[40%] flex flex-col rounded-lg bg-white p-1 shadow"
        >
          <div
            className="flex items-center gap-1"
          >
            <div
              className="h-[10px] w-[10px] rounded-full bg-primary"
            />
            <p
              className="text-grey-700 text-12-light"
              data-testid="txt"
            >
              2024
            </p>
          </div>
          <p
            className="text-primary text-14-bold"
            data-testid="txt"
          >
            43%
          </p>
        </div>
        <div
          style={
            Object {
              "height": undefined,
              "width": 24,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Cards/ItemMonitoringCards Type Map 1`] = `
<div
  className="gap-8, flex-wrap mobile:m-0 mobile:w-full mobile:max-w-[100%] mx-auto grid max-w-full grid-cols-17 gap-3"
>
  <div
    className="w-full rounded-xl border border-neutral-200 p-8 col-span-4 bg-mapsImg bg-cover"
  >
    <div
      className="m-[-18px] mr-[-27px]"
    >
      <div
        className="flex justify-between"
      >
        <div />
        <button
          className="mr-1 rounded-lg bg-white p-1 text-darkCustom-100 hover:text-primary"
          type="button"
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 24,
              }
            }
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
